force-app/main/default/objects/Opportunity__c/fields/Soil_Type__c.field-meta.xml
<CustomField>
    <fullName>Soil_Type__c</fullName>
    <label>Soil Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>