force-app/main/default/objects/Opportunity__c/fields/Source_of_Finance__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Finance__c</fullName>
    <label>Source of Finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_of_Finance</valueSetName>
    </valueSet>
</CustomField>