force-app/main/default/objects/Opportunity__c/fields/Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>Source_Reference__c</fullName>
    <label>Source Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>