force-app/main/default/objects/Opportunity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
                <label>Proposal</label>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>