force-app/main/default/objects/Opportunity__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>