force-app/main/default/objects/Opportunity__c/fields/Total_Amount_for_Construction__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_for_Construction__c</fullName>
    <formula>Built_up_area__c  *  Charge_per_sq_ft_for_Construction_Scope__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount for Construction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>