force-app/main/default/objects/Opportunity__c/fields/Total_amount_for_for_CSC__c.field-meta.xml
<CustomField>
    <fullName>Total_amount_for_for_CSC__c</fullName>
    <formula>Total_Amount_for_Construction__c  *  Charge_per_sq_ft_for_CSC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total amount for for CSC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>