force-app/main/default/objects/Opportunity__c/fields/Total_Commission_for_Design__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_for_Design__c</fullName>
    <formula>Total_Amount_for_Design__c  *  Charge_per_sq_ft_for_Design_Scope_Commis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission for Design</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>