force-app/main/default/objects/Opportunity__c/fields/Total_sqft__c.field-meta.xml
<CustomField>
    <fullName>Total_sqft__c</fullName>
    <label>Total sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>