force-app/main/default/objects/Opportunity__c/fields/Unit_Bundle_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_Bundle_No__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Unit Bundle No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>