force-app/main/default/objects/Opportunity__c/fields/Ventilation__c.field-meta.xml
<CustomField>
    <fullName>Ventilation__c</fullName>
    <label>Ventilation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>