force-app/main/default/objects/Opportunity__c/validationRules/Amount_Calculate_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Calculate_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Property_Type__c  =  &apos;Design&apos; ,Amount_Expected_to_collect__c  &lt;  Amount_Collected__c,  IF(Property_Type__c = &apos;Construction&apos;, Amount_Expected_to_Collect_for_Commisson__c  &lt;  Amount_Collected_for_Commission__c , false) )</errorConditionFormula>
    <errorMessage>Amount Collected should not be greater than the Amount Expected to collect.</errorMessage>
</ValidationRule>