force-app/main/default/objects/Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_Type__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Stage__c</columns>
    <columns>Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Type_of_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Enquiry__c</columns>
    <columns>Lookup_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>